# mmkv

./: .clang-format  .clangd  .cliff.toml  .gitignore  .gitmodules  .ycm_extra_conf.py  CMakeLists.txt  ChangeLog.md  LICENSE  README.md  cloc-conzxy  cloc-mmkv  conanfile.txt
.github/workflows/: cmake-linux.yml  cmake-windows.yml  release-linux.yml  release-win.yml
change-logs/: v1.1.4.md
cmake/: cache_var.cmake  compile_flag.cmake  platform.cmake  proto_util.cmake  utils.cmake
docs/: .buildinfo  README.html  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/.doctrees/: README.doctree  index.doctree  (+1 more)
mmkv/: CMakeLists.txt  version.h
mmkv/algo/: avl_dictionary.h  avl_tree.h  avl_tree_hashtable.h  barray.h  blist.h  block_array.h  comparator_util.h  dictionary.h  hash_set.h  hash_table.h  hash_util.h  key_value.h  libc_allocator_with_realloc.h  libc_allocator_with_realloc_no_record.h  reserved_array.h  slist.h  sorted_set.h  string.h
mmkv/algo/internal/: avl_list.h  avl_node.h  avl_tree.h  avl_tree_base.h  avl_tree_base_impl.h  avl_tree_impl.h  avl_tree_iterator.h  avl_util.h  blist_iterator.h  block_array.tcc  bnode.h  func_util.h  hash_set.h  hash_set_impl.h  hash_table.h  hash_table_impl.h  hash_table_iterator.h  slist_iterator.h  snode.h  tree_hash_table_iterator.h  tree_hashtable.h  tree_hashtable_impl.h
mmkv/app/: client_main.cc  configd_main.cc  rlog_dump.cc  router_main.cc  server_main.cc
mmkv/client/: information.cc  information.h  mmkv_client.cc  mmkv_client.h  option.cc  option.h  response_printer.cc  response_printer.h  translator.cc  translator.h
mmkv/cluster/: cluster.cc  cluster.h
mmkv/config/: chisato.h
mmkv/configd/: configd.cc  configd.h  configd.proto  configd_client.cc  configd_client.h  configd_codec.h  configd_config.cc  configd_config.h  server.cc  server.h  session.cc  session.h
mmkv/db/: data_type.cc  data_type.h  kvdb.cc  kvdb.h  mmkv_data.cc  mmkv_data.h  type.h  vset.cc  vset.h
mmkv/disk/: common.h  file.cc  file.h  log_command.cc  log_command.h  recover.cc  recover.h  request_log.cc  request_log.h  stat.h
mmkv/forwarder/: forwarder.proto  forwarder_codec.h  forwarder_session.h  forwarderd.cc  forwarderd.h  forwarderd_impl.h
mmkv/lua/: config.cc
mmkv/option/: takina.h
mmkv/protocol/: command.cc  command.h  command_type.h  common.h  configuration.h  mmbp.h  mmbp_codec.cc  mmbp_codec.h  mmbp_request.cc  mmbp_request.h  mmbp_response.cc  mmbp_response.h  mmbp_type.h  mmbp_util.h  router_args.cc  router_args.h  router_reply.cc  router_reply.h  shard_args.cc  shard_args.h  shard_code.h  shard_reply.cc  shard_reply.h  status_code.cc  status_code.h  track_request.cc  track_request.h  track_response.cc  track_response.h  translator.cc  translator.h  type.h
mmkv/replacement/: cache_interface.h  lfu_cache.h  lru_cache.h  mru_cache.h
mmkv/replacement/internal/: lfu_cache_impl.h  lru_cache_impl.h  mru_cache_impl.h
mmkv/router/: router.cc  router.h  router_session.cc  router_session.h
mmkv/server/: common.h  config.cc  config.h  mmkv_server.cc  mmkv_server.h  mmkv_session.cc  mmkv_session.h  option.cc  option.h  shard_client.cc  shard_client.h  shard_session.cc  shard_session.h  sharder.cc  track_session.cc  track_session.h  tracker.cc  tracker.h  tracker_client.cc  tracker_client.h
mmkv/sharder/: shard_client.cc  shard_client.h  shard_session.cc  shard_session.h  shard_session_impl.h  sharder.cc  sharder.h  sharder.proto  sharder_client.cc  sharder_client.h  sharder_codec.h  sharder_session.cc  sharder_session.h  util.cc  util.h
mmkv/sharder/internal/: shard_session_impl.h
mmkv/storage/: db.cc  db.h
mmkv/tracker/: common_type.h  configuration.cc  configuration.h  configuration.proto  controller.proto  controller_config.h  shard_controller_client.cc  shard_controller_client.h  shard_controller_client_impl.h  shard_controller_codec.h  shard_controller_server.cc  shard_controller_server.h  shard_controller_session.cc  shard_controller_session.h  shard_controller_session_impl.h  track_session.cc  track_session.h  tracker.cc  tracker.h  tracker_client.cc  tracker_client.h  tracker_observer.cc  tracker_observer.h  type.h
mmkv/tracker/internal/: shard_controller_client_impl.h  shard_controller_session_impl.h
mmkv/util/: compiler_macro.h  conc_util.cc  conc_util.h  conv.cc  conv.h  exception_macro.h  macro.h  memory_footprint.cc  memory_footprint.h  memory_stat.cc  memory_stat.h  memory_util.h  print_util.h  shard_util.h  split.cc  split.h  str_util.cc  str_util.h  tcolor_macro.h  time_util.h  tokenizer.cc  tokenizer.h
mmkv/zstl/: iterator.h  macros.h  type_traits.h  uninitialized.h
release/: v1.1.2.md
scripts/: cloc-conzxy  cloc-mmkv  copy-core
source/: README.rst  conf.py  index.rst
test/: CMakeLists.txt  build.sh  rerun.sh  run.sh
test/algo/: avl_dict_test.cc  avl_hash_table_bench.cc  avl_list_test.cc  avl_tree_bench.cc  avl_tree_test.cc  blist_bench.cc  blist_test.cc  block_array_test.cc  dictionary_hash_test.cc  hash_list_test.cc  hash_set_test.cc  hash_set_test2.cc  hash_util_test.cc  mmkv_reserved_array_int_bench.cc  mmkv_reserved_array_test.cc  mmkv_reserved_array_test2.cc  reserved_array_bench.h  reserved_array_slist_bench.cc  reserved_array_string_bench.cc  reserved_array_test.cc  reserved_array_test2.cc  slist_test.cc  slist_test2.cc  string_test.cc  tree_hash_set_test.cc  util.h  util_test.cc
test/client/: console_test.cc
test/db/: kvdb_bench.cc  kvdb_test.cc  str_test.cc  vset_test.cc
test/disk/: request_log_test.cc
test/lua/: config_test.cc  config_test.lua
test/protocol/: .mmbp_codec_test.cc.swp  mmbp_codec_test.cc  mmbp_request_test.cc  mmbp_response_test.cc  track_request_test.cc
test/replacement/: cache_bench.cc  lfu_cache_test.cc  lru_cache_test.cc
test/server/: shardd_test.cc  test-sharder.sh  tracker_test.cc  trackerd_test.cc
test/tracker/: TODO.md  cluster_test.cc  configuration_test.cc
test/util/: conc_util_test.cc  conv_test.cc  print_util_test.cc  split_test.cc  str_util_test.cc  tokenizer_test.cc
test/zstl/: iterator_test.cc  type_traits_test.cc
(+67 files in other folders)
